Thu May 18 12:00:23 CEST 2006 (tk)
----------------------------------
  * libclamav/str.c: cli_hex2int: small tweak from NJH

Tue May 16 21:15:25 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Some HTML.Phishing.Bank-426 were getting through,
  				based on help from Sven

Mon May 15 20:23:30 CEST 2006 (tk)
----------------------------------
  * shared/options.[ch]: new command line parser module
  * clamd, clamdscan, clamscan, freshclam, sigtool: remove duplicate code and
						    use new command line parser

Sat May 13 18:14:57 CEST 2006 (tk)
----------------------------------
  * libclamav/vba_extract.c: decode_ole_object: return readable file descriptor

Fri May 12 20:04:05 CEST 2006 (tk)
----------------------------------
  * clamscan: s/no-algo/no-algorithmic
  * clamd: s/ScanAlgo/AlgorithmicDetection

Fri May 12 19:35:41 CEST 2006 (tk)
----------------------------------
  * libclamav/scanners.c: fix zero allocation reported by Sergey Svishchev

Fri May 12 18:10:03 BST 2006 (njh)
----------------------------------
  * docs/man/clamav-milter.8:	Be explicit about what is a LAN machine
  * libclamav/pst.c:		rfc2426_escape is now thread safe
  * libclamav/message.c:	RFC2231 messages from thunderbird now handled
  					better

Fri May  5 12:23:23 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Create fewer bounce message FPs

Wed May  3 10:35:40 BST 2006 (njh)
----------------------------------
  * libclamav/scanners.c:	Pass full CTX into the mbox code

Tue May  2 16:21:06 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Reduce bounce false positives

Mon May  1 22:22:28 CEST 2006 (tk)
----------------------------------
  * clamconf/clamconf.c: fix typo spotted by NJH

Mon May  1 20:30:10 CEST 2006 (tk)
----------------------------------
  * libclamav/pe.c: add W32.Polipos.A detection
		    Thanks to aCaB for virus analysis and detection improvements

Mon May  1 19:54:57 CEST 2006 (tk)