@@ -20,6 +20,8 @@
 #include <system.h>
 #include <mszip.h>
 
+#include "others.h"
+
 /* match lengths for literal codes 257.. 285 */
 static const unsigned short lit_lengths[29] = {
   3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 15, 17, 19, 23, 27,
