@@ -1,3 +1,7 @@
+Thu May 18 13:25:58 CEST 2006 (tk)
+----------------------------------
+  * libclamav: minor code cleanup
+
 Thu May 18 12:00:23 CEST 2006 (tk)
 ----------------------------------
   * libclamav/str.c: cli_hex2int: small tweak from NJH
